Добавлена поддержка заметок для каталога. Добавлена защита от обратного пути.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,9 @@
         <button id="upload-btn" onclick="uploadFile()">📤 Загрузить</button>
     </div>
 
+    <!-- Заметки каталога -->
+    <div id="notes" class="notes"></div>
+
     <!-- Список файлов -->
     <div id="file-list"></div>
 
