Переименование кнопок и прозрачность для используемых файлов.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,10 +20,10 @@
 
     <!-- Кнопки создания -->
     <div>
-        <button onclick="createFolder()">📁 Создать папку</button>
+        <button onclick="createFolder()">📁 Создать каталог</button>
         <button onclick="createFile()">📄 Создать файл</button>
         <input type="file" id="upload-input" style="display:none" />
-        <button id="upload-btn" onclick="uploadFile()">📤 Загрузить</button>
+        <button id="upload-btn" onclick="uploadFile()">📤 Загрузить файл</button>
     </div>
 
     <!-- Заметки каталога -->
