Использован другой способ загрузки файлов на сервер. Исправлена неработающая кнопка обновления каталога.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     <div id="nav">
         <input type="text" id="path-input" placeholder="Введите путь" />
         <button onclick="goToPath()">➡️ Перейти</button>
-        <button onclick="refreshCurrent()">🔄 Обновить</button>
+        <button onclick="refreshCurrentFolder()">🔄 Обновить</button>
     </div>
 
     <!-- Кнопки создания -->
