Добавлена поддержка просмотра картинок и текстовых файлов.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,16 @@
         🖱️ Перетащи файлы сюда для загрузки
     </div>
 
+    <!-- Просмотрщики -->
+    <div id="viewer-file-name"></div>
+    <div id="image-viewer">
+        <img id="image-viewer-img">
+    </div>
+
+    <div id="text-viewer">
+        <div id="text-viewer-txt"></div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
