Добавлена обводка просмотрщиков.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,13 +44,16 @@
     </div>
 
     <!-- Просмотрщики -->
-    <div id="viewer-file-name"></div>
-    <div id="image-viewer">
-        <img id="image-viewer-img">
-    </div>
+    <div id="viewers">
+        <div id="viewer-file-name"></div>
 
-    <div id="text-viewer">
-        <div id="text-viewer-txt"></div>
+        <div id="image-viewer">
+            <img id="image-viewer-img">
+        </div>
+
+        <div id="text-viewer">
+            <div id="text-viewer-txt"></div>
+        </div>
     </div>
 
     <script src="app.js"></script>
