Добавлено отображение размера и даты изменения файлов. Обновлён шаблон для файлов. Прокрутка к просмотрщикам после загрузки файла.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
+<template id="file-template">
+    <div class="file-item">
+        <div class="file-name"></div>
+        <div class="file-actions">
+            <div class="file-info">
+                <div class="file-size"></div>
+                <div class="file-date"></div>
+            </div>
+        </div>
+    </div>
+</template>
+
 <body>
     <h1>📂 File Manager</h1>
 
