Добавлена поддержка языков.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,9 +44,9 @@
         </div>
 
         <div class="top-panel-right-side">
-            <!-- <div class="top-panel-lang" id="ru" current="true">Русский</div>
-            <div class="top-panel-lang" id="ua" current="false">Украинский</div>
-            <div class="top-panel-lang" id="en" current="false">English</div> -->
+            <div class="top-panel-lang" id="0" current="true">English</div>
+            <div class="top-panel-lang" id="1" current="false">Русский</div>
+            <div class="top-panel-lang" id="2" current="false">Украинский</div>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
         <!-- Панель навигации -->
         <div class="navigation-panel">
             <div class="navigation">
-                <input type="text" id="path-input" placeholder="Введите путь" />
+                <input type="text" id="path-input" />
                 <button id="navigation-goto-btn" onclick="goToPath()">
                     <img src="icons/goto_arrow.svg" />
                 </button>
