Добавлена кнопка копирования прямой ссылки на скачивание файла/каталога.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,9 @@
                 <div class="file-size">123</div>
                 <div class="file-date">123</div>
             </div>
+            <button class="file-actions-copy-direct-link">
+                <img style="width: 20px;" src="icons/link.svg" />
+            </button>
             <button class="file-actions-rename">
                 <img style="width: 20px;" src="icons/rename.svg" />
             </button>
